// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiNotificationEvent is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="euiNotificationEvent"
>
  <div
    class="euiNotificationEventMeta"
  >
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiBadge euiBadge--hollow euiBadge--iconLeft euiNotificationEventMeta__badge"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            Alert
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiNotificationEventMeta__time"
      >
        1 min ago
      </span>
    </div>
  </div>
  <div
    class="euiNotificationEvent__content"
  >
    <h2
      class="euiNotificationEvent__title"
      data-test-subj="notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="euiNotificationEventMessages"
    >
      <div
        class="euiText euiText--small"
      >
        <p>
          message
        </p>
      </div>
    </div>
  </div>
</article>
`;

exports[`EuiNotificationEvent props contextMenuItems are rendered 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="0"
>
  <div>
    <div>
      <button
        class="euiContextMenuItem"
        type="button"
      >
        <span
          class="euiContextMenu__itemLayout"
        >
          <span
            class="euiContextMenuItem__text"
          >
            Context menu 1 for id: id
          </span>
        </span>
      </button>
      <button
        class="euiContextMenuItem"
        type="button"
      >
        <span
          class="euiContextMenu__itemLayout"
        >
          <span
            class="euiContextMenuItem__text"
          >
            Context menu 2 for id: id
          </span>
        </span>
      </button>
      <button
        class="euiContextMenuItem"
        type="button"
      >
        <span
          class="euiContextMenu__itemLayout"
        >
          <span
            class="euiContextMenuItem__text"
          >
            Context menu 3 for id: id
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiNotificationEvent props headingLevel  is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="euiNotificationEvent"
>
  <div
    class="euiNotificationEventMeta"
  >
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiBadge euiBadge--hollow euiBadge--iconLeft euiNotificationEventMeta__badge"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            Alert
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiNotificationEventMeta__time"
      >
        1 min ago
      </span>
    </div>
  </div>
  <div
    class="euiNotificationEvent__content"
  >
    <h4
      class="euiNotificationEvent__title"
      data-test-subj="notificationEventTitle"
      id="generated-id"
    >
      title
    </h4>
    <div
      class="euiNotificationEventMessages"
    >
      <div
        class="euiText euiText--small"
      >
        <p>
          message
        </p>
      </div>
    </div>
  </div>
</article>
`;

exports[`EuiNotificationEvent props isRead  is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="euiNotificationEvent euiNotificationEvent--withReadState"
>
  <div
    class="euiNotificationEventMeta"
  >
    <div
      class="euiNotificationEventMeta__section"
    >
      <button
        aria-label="Mark title as unread."
        class="euiButtonIcon euiButtonIcon--primary euiNotificationEventReadButton euiNotificationEventReadButton--isRead"
        data-test-subj="notificationEventReadButton"
        title="Mark title as unread."
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          data-euiicon-type="dot"
        />
      </button>
      <span
        class="euiBadge euiBadge--hollow euiBadge--iconLeft euiNotificationEventMeta__badge"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            Alert
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiNotificationEventMeta__time"
      >
        1 min ago
      </span>
    </div>
  </div>
  <div
    class="euiNotificationEvent__content"
  >
    <h2
      class="euiNotificationEvent__title euiNotificationEvent__title--isRead"
      data-test-subj="notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="euiNotificationEventMessages"
    >
      <div
        class="euiText euiText--small"
      >
        <p>
          message
        </p>
      </div>
    </div>
  </div>
</article>
`;

exports[`EuiNotificationEvent props multiple messages are rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="euiNotificationEvent"
>
  <div
    class="euiNotificationEventMeta"
  >
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiBadge euiBadge--hollow euiBadge--iconLeft euiNotificationEventMeta__badge"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            Alert
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiNotificationEventMeta__time"
      >
        1 min ago
      </span>
    </div>
  </div>
  <div
    class="euiNotificationEvent__content"
  >
    <h2
      class="euiNotificationEvent__title"
      data-test-subj="notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="euiNotificationEventMessages"
    >
      <div
        class="euiAccordion euiNotificationEventMessages__accordion"
      >
        <div
          class="euiAccordion__triggerWrapper"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="false"
            aria-label="+ 3 messages for title"
            class="euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiIEFlexWrapFix"
            >
              + 3 messages
            </span>
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper"
          id="generated-id"
          role="region"
          tabindex="-1"
        >
          <div>
            <div
              class=""
            >
              <div
                class="euiNotificationEventMessages__accordionContent"
              >
                <p>
                  message 1
                </p>
                <p>
                  message 2
                </p>
                <p>
                  message 3
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</article>
`;
